[package]
name = "custom_assert"
version = "0.1.0"
authors = ["Jeremy Davis <jeremydavis519@gmail.com>"]
edition = "2018"

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.40"

[dependencies.syn]
version = "2.0.101"
features = ["extra-traits", "derive", "parsing", "printing", "full"]

[dev-dependencies]
sylvia-runtime-macros = { path = "../.." }
