[package]
name = "custom_attribute"
version = "0.1.0"
edition = "2021"
authors = ["Bartłomiej Kuras <bart.k@confio.gmbh>"]

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0.40"
syn = { version = "2.0.101", features = [
    "extra-traits",
    "derive",
    "parsing",
    "printing",
    "full",
] }

[dev-dependencies]
sylvia-runtime-macros = { path = "../.." }
